# CaPy

./: .gitignore  CLAUDE.md  Dockerfile  README.md  capy-prd-fsd.md  pyproject.toml
.claude/: settings.json
.claude/agents/: architect-explainer.md  code-reviewer.md  data-detective.md
.claude/commands/: biology-notebook.md  colab-export.md  coverage-push.md  evaluate-model.md  explain-this.md  phase1-data.md  phase1-model.md  phase1-scaffold.md  phase2-ablations.md  phase2-training.md  phase3-interpret.md  polish-docs.md  results-notebook.md  review-and-commit.md  setup-ci.md
.claude/skills/: contrastive-learning-reference.md  pytorch-geometric-patterns.md
.github/workflows/: ci.yml
configs/: ablation_bimodal.yaml  default.yaml  sweep.yaml
data/: README.md
docs/local/: capy-guide.md  workflow-guide.md
docs/superpowers/specs/: 2026-03-10-data-pipeline-overhaul-design.md
notebooks/: colab_training.ipynb
scripts/: evaluate.py  generate_figures.py  inspect_data.py  run_ablations.py  train.py
src/: __init__.py
src/data/: __init__.py  dataset.py  download.py  featurize.py  preprocess.py
src/evaluation/: __init__.py  retrieval.py
src/models/: __init__.py  capy.py  encoders.py  losses.py
src/training/: __init__.py  scheduler.py  trainer.py
src/utils/: __init__.py  config.py  logging.py
tests/: __init__.py  conftest.py  test_data.py  test_integration.py  test_losses.py  test_models.py  test_retrieval.py  test_training.py
