[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "capy"
version = "0.1.0"
description = "Contrastive Alignment of Phenotypic Yields — tri-modal contrastive learning for drug discovery"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Hoang Ngo"}]

dependencies = [
    # Core ML
    "torch>=2.1",
    "torch-geometric>=2.4",

    # Chemistry
    "rdkit>=2023.09",

    # Biology
    "scanpy>=1.9",
    "gseapy>=1.0",

    # Data
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.11",

    # Visualization
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "umap-learn>=0.5",

    # Infrastructure
    "wandb>=0.16",
    "omegaconf>=2.3",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.2",
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
